Added branch reporting feature

--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -100,27 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T15:03:50.935103Z",
-     "start_time": "2022-01-03T15:03:50.507121Z"
+     "end_time": "2022-01-06T15:56:08.611604Z",
+     "start_time": "2022-01-06T15:56:08.589441Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Authorization set up for user:  KevinWatersTR\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import pprint\n",
     "from gitsecrets import GITHUB_USER,GITHUB_TOKEN\n",
+    "from IPython.display import display, Math, HTML, Markdown\n",
+    "\n",
+    "display(HTML(\"<style>.container { width:80% !important; }</style>\"))\n",
+    "display(HTML(\"<style>div.output_scroll { height: 70em; }</style>\"))\n",
+    "\n",
     "# Create auth for Git credentials\n",
     "auth=requests.auth.HTTPBasicAuth( GITHUB_USER  ,GITHUB_TOKEN )\n",
     "print('Authorization set up for user: ', GITHUB_USER)"
@@ -137,27 +134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T15:04:07.715554Z",
-     "start_time": "2022-01-03T15:03:55.329510Z"
+     "end_time": "2022-01-06T15:53:02.362974Z",
+     "start_time": "2022-01-06T15:52:54.592923Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Will the report be for a User or Org (User/Org)?\n",
-      "O\n",
-      "Report will be based on your organization, please type name of org:\n",
-      "tr\n",
-      "Authorization Confirmed for user: KevinWatersTR Repo Url is: https://api.github.com/orgs/tr/repos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Will the report be for a User or Org (User/Org)?')\n",
     "type = input()\n",
@@ -200,25 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T16:13:49.491214Z",
-     "start_time": "2022-01-03T16:13:49.468007Z"
+     "end_time": "2022-01-06T15:53:56.706056Z",
+     "start_time": "2022-01-06T15:53:56.691911Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Filters:  1\n",
-      "Filter List:\n",
-      "https://api.github.com/repos/tr/truccr_oci-iac\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tmpReposFilterUrls = []\n",
     "# Add Filters as required as show below\n",
@@ -252,23 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T16:13:54.790001Z",
-     "start_time": "2022-01-03T16:13:54.137668Z"
+     "end_time": "2022-01-06T15:54:17.993694Z",
+     "start_time": "2022-01-06T15:54:17.607225Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Repos Found:  1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "repos =[]\n",
     "if reposFilterUrls is not None and len(reposFilterUrls) > 0:\n",
@@ -291,96 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "770a9470",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T16:14:02.614681Z",
-     "start_time": "2022-01-03T16:13:57.258315Z"
+     "end_time": "2022-01-06T19:25:59.333047Z",
+     "start_time": "2022-01-06T19:25:54.349604Z"
     },
     "code_folding": [
      12,
      17,
-     23
-    ],
-    "scrolled": true
+     32
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Repo: truccr_oci-iac\n",
-      "    Private:      True\n",
-      "    HTTPS URL:    https://github.com/tr/truccr_oci-iac.git\n",
-      "    SSH URL:      git@github.com:tr/truccr_oci-iac.git\n",
-      "    Contents URL: https://api.github.com/repos/tr/truccr_oci-iac/contents/\n",
-      "    Files:\n",
-      "        .gitignore\n",
-      "        README.md\n",
-      "    Folders:\n",
-      "        /oci-arch-devops-function-stack-latest\n",
-      "        /templates\n",
-      "    Branches:\n",
-      "          YosefEjiguTR-patch-1\n",
-      "              Author: YosefEjiguTR\n",
-      "              Date:   2021-08-26T02:20:15Z\n",
-      "          ionut2\n",
-      "              Author: Waters\n",
-      "              Date:   2021-12-16T16:00:41Z\n",
-      "          main\n",
-      "              Author: Waters\n",
-      "              Date:   2021-07-28T15:15:18Z\n",
-      "          terra2\n",
-      "              Author: KevinWatersTR\n",
-      "              Date:   2021-12-23T17:02:17Z\n",
-      "          terraform-code\n",
-      "              Author: YosefEjiguTR\n",
-      "              Date:   2021-11-15T22:04:56Z\n",
-      "          terraform-v0\n",
-      "              Author: KevinWatersTR\n",
-      "              Date:   2021-12-13T15:34:34Z\n",
-      "    Folder Contents:\n",
-      "        /oci-arch-devops-function-stack-latest\n",
-      "           README.md\n",
-      "           datasources.tf\n",
-      "           devops-policies.tf\n",
-      "           devops-variables.tf\n",
-      "           devops.tf\n",
-      "           functions-policies.tf\n",
-      "           functions-setup.tf\n",
-      "           functions.tf\n",
-      "           locals.tf\n",
-      "           network.tf\n",
-      "           providers.tf\n",
-      "           schema.yaml\n",
-      "           tags.tf\n",
-      "           terraform.tfvars.example\n",
-      "           tls.tf\n",
-      "           variables.tf\n",
-      "           /functions\n",
-      "               /helloworldfn\n",
-      "                    func.py\n",
-      "                    func.yaml\n",
-      "                    requirements.txt\n",
-      "               /helloworldfn2\n",
-      "                    func.py\n",
-      "                    func.yaml\n",
-      "                    requirements.txt\n",
-      "           /images\n",
-      "                dev-ops-deployment-pipeline.png\n",
-      "        /templates\n",
-      "           /TestTemplate\n",
-      "                TestTemplate.tf\n",
-      "    Open Issues:\n",
-      "          4 - Created terraform_templates/speedometer folder from zipped file (tr_terraform_code_modules.zip) for easier access.  Removed old zip file.\n",
-      "          3 - The latest version of the terraform code for standing up TRUCCR environment.\n",
-      "\n",
-      "---\n",
-      "----------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for repo in repos :\n",
     "    print( 'Repo:',repo[\"name\"])\n",
@@ -467,11 +358,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ef9838e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-06T20:57:18.469928Z",
+     "start_time": "2022-01-06T20:57:18.103409Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for branch in branchs.json():\n",
+    "    print('         ' ,branch['name'])\n",
+    "    if branch['name'] == 'upd-terraform-resource-names':\n",
+    "        myBranch = branch\n",
+    "        myUrl = branch ['commit'] ['url']\n",
+    "        break\n",
+    "# pprint.pprint(myBranch)\n",
+    "myBranchContents = requests.get(myUrl,auth=auth)\n",
+    "# pprint.pprint(myBranchContents.json()['commit']['tree'] ['url']   )   \n",
+    "myBranchTreeUrl = myBranchContents.json()['commit']['tree'] ['url'] \n",
+    "print('My Branch URL: ' , myBranchTreeUrl )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5de7b4e1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-06T20:04:39.798641Z",
+     "start_time": "2022-01-06T20:04:36.655472Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "x =requests.get(myBranchTreeUrl,auth=auth)\n",
+    "\n",
+    "for tree in x.json()['tree']  :\n",
+    "    if tree['type'] == 'tree':\n",
+    "        print(tree['path'] + '/'       )\n",
+    "        x2 = requests.get(tree['url'] , auth=auth)\n",
+    "        for tree2 in x2.json()['tree']:\n",
+    "            print( '    ',  tree2['path'] + (  '/'  if tree2['type'] == 'tree' else ''  ) )\n",
+    "            if tree2['type'] == 'tree' :\n",
+    "                x3 = requests.get(tree2['url'] , auth=auth)\n",
+    "                for tree3 in x3.json()['tree']:\n",
+    "                    print( '        ',  tree3['path'] + (  '/'  if tree3['type'] == 'tree' else ''  ) )\n",
+    "                    if tree3['type'] == 'tree' :\n",
+    "                        x4 = requests.get(tree3['url'] , auth=auth)\n",
+    "                        for tree4 in x4.json()['tree']:\n",
+    "                            print( '            ',  tree4['path'] + (  '/'  if tree4['type'] == 'tree' else ''  ) )\n",
+    "                            if tree4['type'] == 'tree' :\n",
+    "                                x5 = requests.get(tree4['url'] , auth=auth)\n",
+    "                                for tree5 in x5.json()['tree']:\n",
+    "                                    print( '                ',  tree5['path'] + (  '/'  if tree5['type'] == 'tree' else ''  ) )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5861f92",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-06T21:11:26.903446Z",
+     "start_time": "2022-01-06T21:11:26.627007Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "commentsUrl =  requests.get(  myBranchContents.json()['comments_url']  , auth=auth)\n",
+    "pprint.pprint(commentsUrl.json())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a9b16f3",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Gists Report"
    ]
@@ -479,9 +445,7 @@
   {
    "cell_type": "markdown",
    "id": "b0a6936b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Import Packages and Fetch Gists"
    ]
@@ -494,8 +458,7 @@
     "ExecuteTime": {
      "end_time": "2021-12-30T19:38:07.834468Z",
      "start_time": "2021-12-30T19:38:07.605482Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -513,9 +476,7 @@
   {
    "cell_type": "markdown",
    "id": "77f00c9a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Gists Report"
    ]
@@ -528,8 +489,7 @@
     "ExecuteTime": {
      "end_time": "2021-12-30T19:38:13.474480Z",
      "start_time": "2021-12-30T19:38:13.458301Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -555,9 +515,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "198f0b53",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -590,10 +548,10 @@
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
-    "height": "411.991px",
-    "left": "54px",
-    "top": "53.97px",
-    "width": "164.977px"
+    "height": "411.964px",
+    "left": "46px",
+    "top": "207.968px",
+    "width": "310.962px"
    },
    "toc_section_display": true,
    "toc_window_display": true
