Added Comments and better Task listing

--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ca6e1e",
+   "id": "aeca62fa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-14T22:59:20.019075Z",
-     "start_time": "2022-02-14T22:59:19.921156Z"
+     "end_time": "2022-02-17T09:34:36.997787Z",
+     "start_time": "2022-02-17T09:34:36.981237Z"
     }
    },
    "outputs": [],
@@ -22,9 +22,67 @@
     "import pytz\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
+    "display(HTML(\"<style>.container { width:80% !important; }</style>\"))\n",
     "with open('ReposIssuesList.json') as f:\n",
     "    data = f.read()\n",
-    "reposIssuesList = json.loads(data)\n",
+    "reposIssuesList = json.loads(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8470d65e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPEN_ISSUES_TEMPLATE = \"\"\"\n",
+    "\\hspace {10mm} \\\\normalsize {\\\\textbf{TITLE - #NBR}} \\\\\\[3pt] \n",
+    "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE }} \\\\\\[1pt] \n",
+    "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\ \\\\\\ \n",
+    "\\hspace {10mm} \\\\bbox[5pt]  {\\small {TASKS }} \\\\\\[5pt] \n",
+    "\\hspace {10mm} \\small { LABELS } \\\\\\ \n",
+    "\"\"\"\n",
+    "ISSUE_TEMPLATE = \"\"\"\n",
+    "\\hspace {10mm} \\small {\\\\textbf{TITLE - #NBR}} \\\\\\[1pt] \n",
+    "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE }} \\\\\\[1pt] \n",
+    "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\[1pt] \n",
+    "\"\"\"\n",
+    "CLOSED_ISSUE_TEMPLATE = \"\"\"\n",
+    "\\hspace {10mm} \\small {\\\\textbf{TITLE - #NBR}} \\\\\\[1pt] \n",
+    "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE - Closed on CDATE }} \\\\\\[1pt] \n",
+    "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\[1pt] \n",
+    "\\hspace {10mm} \\small { LABELS } \\\\\\[1pt] \n",
+    "\"\"\"\n",
+    "LABELS_TEMPLATE = \"\"\"\n",
+    "\\\\begin{array}{l l} \n",
+    "\\\\textit{Comments:} &  COMM \n",
+    "\\\\end{array}  \n",
+    "\"\"\"\n",
+    "\n",
+    "TASKS_TEMPLATE = \"\"\"\n",
+    "\\\\begin{array}{l l} \n",
+    "\\\\textit{Tasks:} & \\\\hspace {10mm} TASKS \n",
+    "\\\\end{array} \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ca6e1e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-16T18:33:54.928892Z",
+     "start_time": "2022-02-16T18:33:54.288451Z"
+    },
+    "code_folding": [
+     122,
+     153
+    ],
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "issuesList = []\n",
     "for repo in reposIssuesList:\n",
@@ -46,36 +104,14 @@
     "# print('Recent start date '   ,\n",
     "#       recently_datetime.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d/%Y %I:%M %p %Z\") )   \n",
     "reportTitle = \\\n",
-    "\"\"\"\\hspace {40mm} \\Large {\\\\textbf{TRUCCR Issues Report}} \\\\\\[1pt]\n",
-    "\\hspace {60mm} \\\\small {\\\\textsf{Date: TDATE  }} \"\"\"\n",
+    "\"\"\"\\hspace {60mm} \\Large {\\\\textbf{TRUCCR Issues Report}} \\\\\\[1pt]\n",
+    "\\hspace {80mm} \\\\small {\\\\textsf{Date: TDATE  }} \"\"\"\n",
     "\n",
     "today = td.astimezone(pytz.timezone('US/Eastern'))\n",
     "todayDate = today.strftime(\"%m/%d/%Y\")\n",
     "display(Markdown( '$ ' + reportTitle.replace('TDATE', todayDate  ) + ' $' ))\n",
-    "display(Markdown( '$ \\\\normalsize \\\\color{blue}  {\\\\textsf{Current Open Issues}} \\\\\\[1pt]  $ '  ))\n",
-    "OPEN_ISSUES_TEMPLATE = \"\"\"\n",
-    "\\hspace {10mm} \\small {\\\\textbf{TITLE - #NBR}} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE }} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Issue Tasks: }} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {TASKS } \\\\\\[1pt] \n",
-    "\"\"\"\n",
-    "ISSUE_TEMPLATE = \"\"\"\n",
-    "\\hspace {10mm} \\small {\\\\textbf{TITLE - #NBR}} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE }} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\[1pt] \n",
-    "\"\"\"\n",
-    "CLOSED_ISSUE_TEMPLATE = \"\"\"\n",
-    "\\hspace {10mm} \\small {\\\\textbf{TITLE - #NBR}} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE - Closed on CDATE }} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\[1pt] \n",
-    "\\hspace {10mm} \\small { LABELS } \\\\\\[1pt] \n",
-    "\"\"\"\n",
-    "LABELS_TEMPLATE = \"\"\"\n",
-    "\\\\begin{array}{l l} \n",
-    "\\\\textit{Comments:} &  COMM \n",
-    "\\\\end{array}  \n",
-    "\"\"\"\n",
+    "display(Markdown( '$ \\\\large \\\\color{blue}  {\\\\textsf{Current Open Issues}} \\\\\\  $ '  ))\n",
+    "\n",
     "# print ('Open Issues')\n",
     "for issue in issuesList:\n",
     "    if issue['state'] == 'open':\n",
@@ -96,19 +132,34 @@
     "        if issueBody is not None :\n",
     "            issueCnt = 0\n",
     "#             issueLineList  = string2List(issueBody)\n",
-    "            issueMatrix = ' \\\\begin{array}{l}  \\\\\\[1pt] '\n",
+    "            issueMatrix = ' \\\\begin{array}{l}  '\n",
     "            for issueLine in issueBody:\n",
     "                if len(issueLine) > 1 and ('[ ]' in  issueLine or '[x]' in issueLine) :\n",
     "                    issueCnt += 1\n",
-    "                    matrixLine = ' \\\\small { \\\\textsf{LINE }}   \\\\\\[1pt] '\n",
+    "                    matrixLine = ' \\\\small { \\\\textsf{LINE }} \\\\\\ '\n",
     "                    issueMatrix = issueMatrix + matrixLine.replace('LINE', issueLine   )\n",
     "            if issueCnt > 0:\n",
-    "                issueMatrix = issueMatrix + '  \\\\end{array} \\\\\\[2pt]   '\n",
-    "                openIssues = openIssues.replace('TASKS' , issueMatrix )\n",
+    "                issueMatrix = issueMatrix + '  \\\\end{array}  '\n",
+    "                tasksComments = TASKS_TEMPLATE\n",
+    "                tasksComments = tasksComments.replace('TASKS' ,issueMatrix)\n",
+    "                openIssues = openIssues.replace('TASKS' , tasksComments )\n",
     "            else:\n",
     "                openIssues = openIssues.replace('TASKS' , '\\\\textit{No Tasks Entered}' )\n",
     "        else:\n",
     "            openIssues = openIssues.replace('TASKS' , '\\\\textit{No Tasks Entered}' )  \n",
+    "        \n",
+    "        \n",
+    "        if len(issue['labels']) > 0:\n",
+    "            labelsMatrix = ' \\\\begin{array}{l}    '\n",
+    "            for label in issue['labels'] :\n",
+    "                matrixLine = ' \\\\small { \\\\textsf{LABEL }}  \\\\\\  '\n",
+    "                labelsMatrix = labelsMatrix + matrixLine.replace('LABEL', label['description'] )\n",
+    "            labelsMatrix = labelsMatrix + '  \\\\end{array}   '\n",
+    "            issueComments = LABELS_TEMPLATE\n",
+    "            openIssues = openIssues.replace('LABELS' , issueComments.replace('COMM',labelsMatrix ))\n",
+    "        else:\n",
+    "            openIssues = openIssues.replace('LABELS' , ' \\\\textit{No Comments} ' )    \n",
+    "                \n",
     "        display(Markdown ('$ ' + openIssues   + ' $'    ))\n",
     "               \n",
     "# print('\\nIssues Closed Last Week')\n",
@@ -132,7 +183,7 @@
     "        if len(issue['labels']) > 0:\n",
     "            labelsMatrix = ' \\\\begin{array}{l}    '\n",
     "            for label in issue['labels'] :\n",
-    "                matrixLine = ' \\\\small { \\\\textsf{LABEL }}    '\n",
+    "                matrixLine = ' \\\\small { \\\\textsf{LABEL }}  \\\\\\  '\n",
     "                labelsMatrix = labelsMatrix + matrixLine.replace('LABEL', label['description'] )\n",
     "            labelsMatrix = labelsMatrix + '  \\\\end{array}   '\n",
     "            issueComments = LABELS_TEMPLATE\n",
@@ -199,7 +250,7 @@
     "width": "182.948px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
