--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -98,12 +98,13 @@
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-13T17:24:08.293763Z",
-     "start_time": "2022-02-13T17:24:08.263346Z"
+     "end_time": "2022-02-16T18:32:02.294249Z",
+     "start_time": "2022-02-16T18:32:00.911227Z"
     },
     "code_folding": [
-     14,
-     28
+     21,
+     28,
+     35
     ]
    },
    "outputs": [],
@@ -182,8 +183,8 @@
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-13T16:52:06.548236Z",
-     "start_time": "2022-02-13T16:51:50.308930Z"
+     "end_time": "2022-02-16T18:32:42.239774Z",
+     "start_time": "2022-02-16T18:32:31.951785Z"
     }
    },
    "outputs": [],
@@ -233,8 +234,8 @@
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-13T19:10:24.282941Z",
-     "start_time": "2022-02-13T19:10:24.270745Z"
+     "end_time": "2022-02-16T18:32:52.734077Z",
+     "start_time": "2022-02-16T18:32:52.722042Z"
     }
    },
    "outputs": [],
@@ -275,8 +276,8 @@
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-13T19:10:23.787527Z",
-     "start_time": "2022-02-13T19:10:22.754062Z"
+     "end_time": "2022-02-16T18:32:58.639854Z",
+     "start_time": "2022-02-16T18:32:57.660315Z"
     }
    },
    "outputs": [],
@@ -310,8 +311,8 @@
    "id": "770a9470",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-14T22:03:30.599040Z",
-     "start_time": "2022-02-14T22:03:15.780517Z"
+     "end_time": "2022-02-16T22:30:40.064527Z",
+     "start_time": "2022-02-16T22:30:27.633216Z"
     },
     "code_folding": [
      18,
@@ -398,7 +399,8 @@
     "            else:\n",
     "                print('                No Tasks' , )   \n",
     "            issuesDict['body'] = issueTopicsList\n",
-    "\n",
+    "        if issue['number'] == 15:\n",
+    "            x = dddd\n",
     "        issuesDict['labels'] = []\n",
     "        if len(issue['labels']) > 0:\n",
     "            for label in issue['labels'] :\n",
@@ -417,9 +419,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "787ed14a",
+   "metadata": {},
+   "source": [
+    "## Milestones"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290a9481",
+   "id": "80c511d3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-16T23:35:33.129117Z",
+     "start_time": "2022-02-16T23:35:28.335969Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "milestones = ['Remote Tenancy Capabilities'  , 'Tachometer Capabilities' , 'CURB Capabilities', 'Standards Compliance']\n",
+    "for milestone in milestones:\n",
+    "    for repo in repos :\n",
+    "        issues = requests.get(repo['issues_url'].replace('{/number}','?state=open'),auth=auth)\n",
+    "        issuesList = sorted(issues.json() ,key=lambda i:i['number']   )\n",
+    "        for issue in issuesList :   \n",
+    "#             try:\n",
+    "            if issue['milestone'] ['title'] == milestone :\n",
+    "                print('Milestone:' , issue['milestone'] ['title'] + ' -  Issue - ' + str(issue['title']) )\n",
+    "#             except:\n",
+    "#                 pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e144ecaa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-14T15:36:16.917764Z",
@@ -706,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f145111",
+   "id": "519819c0",
    "metadata": {},
    "source": [
     "# Archives"
@@ -714,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce8eece",
+   "id": "b5ef8744",
    "metadata": {},
    "source": [
     "## Deprecated Main Branch Content Listing"
@@ -723,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaaa9d14",
+   "id": "7d8e1120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93eb6366",
+   "id": "2f03df1c",
    "metadata": {},
    "source": [
     "## Issues"
@@ -780,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec42aa6",
+   "id": "80e83ae1",
    "metadata": {},
    "outputs": [],
    "source": [
