Added Milestones capabilities

--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -98,8 +98,8 @@
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T18:32:02.294249Z",
-     "start_time": "2022-02-16T18:32:00.911227Z"
+     "end_time": "2022-02-22T14:50:42.885595Z",
+     "start_time": "2022-02-22T14:50:38.617839Z"
     },
     "code_folding": [
      21,
@@ -183,8 +183,8 @@
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T18:32:42.239774Z",
-     "start_time": "2022-02-16T18:32:31.951785Z"
+     "end_time": "2022-02-23T16:52:34.166595Z",
+     "start_time": "2022-02-23T16:52:26.831225Z"
     }
    },
    "outputs": [],
@@ -234,8 +234,8 @@
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T18:32:52.734077Z",
-     "start_time": "2022-02-16T18:32:52.722042Z"
+     "end_time": "2022-02-23T16:52:41.261995Z",
+     "start_time": "2022-02-23T16:52:41.254007Z"
     }
    },
    "outputs": [],
@@ -246,6 +246,7 @@
     "tmpReposFilterUrls.append('truccr_oci-iac')\n",
     "tmpReposFilterUrls.append('truccr_oci-ca-dumptruck')\n",
     "tmpReposFilterUrls.append('truccr_oci-manual-transmission')\n",
+    "# tmpReposFilterUrls.append('truccr_oci-frontloader')\n",
     "# tmpReposFilterUrls.append('truccr_atlas')\n",
     "\n",
     "print( 'Number of Filters: '  ,len(tmpReposFilterUrls))\n",
@@ -276,8 +277,8 @@
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T18:32:58.639854Z",
-     "start_time": "2022-02-16T18:32:57.660315Z"
+     "end_time": "2022-02-23T16:52:46.740663Z",
+     "start_time": "2022-02-23T16:52:45.703352Z"
     }
    },
    "outputs": [],
@@ -311,8 +312,8 @@
    "id": "770a9470",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T22:30:40.064527Z",
-     "start_time": "2022-02-16T22:30:27.633216Z"
+     "end_time": "2022-02-23T16:53:08.026526Z",
+     "start_time": "2022-02-23T16:52:51.254829Z"
     },
     "code_folding": [
      18,
@@ -380,6 +381,7 @@
     "        issuesDict['created_at'] = issue['created_at']\n",
     "        issuesDict['closed_at'] = issue['closed_at']\n",
     "        issuesDict['number'] = issue['number']\n",
+    "        issuesDict['milestone'] = issue['milestone']\n",
     "\n",
     "        issuesDict['body'] = []\n",
     "        if 'open' in issue['state']:\n",
@@ -399,8 +401,6 @@
     "            else:\n",
     "                print('                No Tasks' , )   \n",
     "            issuesDict['body'] = issueTopicsList\n",
-    "        if issue['number'] == 15:\n",
-    "            x = dddd\n",
     "        issuesDict['labels'] = []\n",
     "        if len(issue['labels']) > 0:\n",
     "            for label in issue['labels'] :\n",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787ed14a",
+   "id": "03864b0e",
    "metadata": {},
    "source": [
     "## Milestones"
@@ -429,28 +429,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c511d3",
+   "id": "d1e325a1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T23:35:33.129117Z",
-     "start_time": "2022-02-16T23:35:28.335969Z"
+     "end_time": "2022-02-22T15:22:56.466332Z",
+     "start_time": "2022-02-22T15:22:56.449251Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "milestones = ['Remote Tenancy Capabilities'  , 'Tachometer Capabilities' , 'CURB Capabilities', 'Standards Compliance']\n",
+    "milestones = ['Multiple Tenancy Capable'  , 'Tachometer Functional' , 'CURB Functional', 'Standards Compliant']\n",
     "for milestone in milestones:\n",
-    "    for repo in repos :\n",
-    "        issues = requests.get(repo['issues_url'].replace('{/number}','?state=open'),auth=auth)\n",
-    "        issuesList = sorted(issues.json() ,key=lambda i:i['number']   )\n",
+    "    print(milestone )\n",
+    "    for repoIssue in reposIssuesList :\n",
+    "        issuesList = sorted(repoIssue['issues'] ,key=lambda i:i['number']   )\n",
     "        for issue in issuesList :   \n",
-    "#             try:\n",
-    "            if issue['milestone'] ['title'] == milestone :\n",
-    "                print('Milestone:' , issue['milestone'] ['title'] + ' -  Issue - ' + str(issue['title']) )\n",
-    "#             except:\n",
-    "#                 pass\n",
-    "    "
+    "            if issue['milestone'] is not None  and  issue['milestone']['title']  == milestone :\n",
+    "                print( '    ' , issue['title'])\n"
    ]
   },
   {
