--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeca62fa",
+   "id": "b912c774",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-17T09:34:36.997787Z",
-     "start_time": "2022-02-17T09:34:36.981237Z"
+     "end_time": "2022-02-23T16:53:35.719760Z",
+     "start_time": "2022-02-23T16:53:35.689993Z"
     }
    },
    "outputs": [],
@@ -22,17 +22,25 @@
     "import pytz\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "display(HTML(\"<style>.container { width:80% !important; }</style>\"))\n",
+    "display(HTML(\"<style>.container { width:310mm !important; }</style>\"))\n",
     "with open('ReposIssuesList.json') as f:\n",
     "    data = f.read()\n",
-    "reposIssuesList = json.loads(data)\n"
+    "reposIssuesList = json.loads(data)\n",
+    "#\n",
+    "# To Create WebPdf use:   jupyter nbconvert .\\GitHubReportMd.ipynb --to webpdf --no-input\n",
+    "#"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8470d65e",
-   "metadata": {},
+   "id": "27be11c9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-23T16:53:42.772156Z",
+     "start_time": "2022-02-23T16:53:42.762199Z"
+    }
+   },
    "outputs": [],
    "source": [
     "OPEN_ISSUES_TEMPLATE = \"\"\"\n",
@@ -72,14 +80,15 @@
    "id": "b0ca6e1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-16T18:33:54.928892Z",
-     "start_time": "2022-02-16T18:33:54.288451Z"
+     "end_time": "2022-02-23T16:53:48.731543Z",
+     "start_time": "2022-02-23T16:53:48.654255Z"
     },
     "code_folding": [
-     122,
-     153
-    ],
-    "scrolled": false
+     63,
+     73,
+     95,
+     132
+    ]
    },
    "outputs": [],
    "source": [
@@ -96,6 +105,10 @@
     "        issueDict['state'] = issue['state']\n",
     "        issueDict['body'] = issue['body']\n",
     "        issueDict['labels'] = issue['labels']\n",
+    "        if issue['milestone'] is not None:\n",
+    "            issueDict['milestone'] = issue['milestone']['title']\n",
+    "        else:\n",
+    "            issueDict['milestone'] = 'None'\n",
     "        issuesList.append(issueDict)\n",
     "\n",
     "td = datetime.datetime.today()\n",
@@ -105,65 +118,84 @@
     "#       recently_datetime.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d/%Y %I:%M %p %Z\") )   \n",
     "reportTitle = \\\n",
     "\"\"\"\\hspace {60mm} \\Large {\\\\textbf{TRUCCR Issues Report}} \\\\\\[1pt]\n",
-    "\\hspace {80mm} \\\\small {\\\\textsf{Date: TDATE  }} \"\"\"\n",
+    "\\hspace {80mm} \\\\small {\\\\textsf{Date: TDATE  }   }   \\\\\\[20pt] \"\"\"\n",
     "\n",
     "today = td.astimezone(pytz.timezone('US/Eastern'))\n",
     "todayDate = today.strftime(\"%m/%d/%Y\")\n",
     "display(Markdown( '$ ' + reportTitle.replace('TDATE', todayDate  ) + ' $' ))\n",
-    "display(Markdown( '$ \\\\large \\\\color{blue}  {\\\\textsf{Current Open Issues}} \\\\\\  $ '  ))\n",
+    "currentIssuesTitle = \"\"\"$\n",
+    "\\hspace {70mm} \\\\large \\\\color{red}  {\\\\textbf{Current Open Issues}} \n",
+    "\\hspace {75mm} \\\\normalsize \\\\color{blue}  {\\\\textsf{Grouped by Milestone}} \\\\\\[10pt]\n",
+    "$ \"\"\"\n",
+    "display(Markdown(currentIssuesTitle ))\n",
+    "milestoneTitle = '$ \\hspace {0mm} \\\\large  \\\\color{blue}{\\\\textsf{ MSTONE}} $ '\n",
     "\n",
     "# print ('Open Issues')\n",
-    "for issue in issuesList:\n",
-    "    if issue['state'] == 'open':\n",
-    "#         print('\\n' + issue['issue_title'] + ' - #' + str(issue['issue_number'] )   )\n",
-    "        openIssues = OPEN_ISSUES_TEMPLATE\n",
-    "        openIssues = openIssues.replace('TITLE' , issue['issue_title'] )\n",
-    "        openIssues = openIssues.replace('NBR' , str(issue['issue_number']) )\n",
-    "        openedDate = datetime.datetime.strptime(issue['date_opened'],\"%Y-%m-%dT%H:%M:%SZ\")\n",
-    "        age = td - openedDate\n",
-    "        dateOpened =openedDate.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d\")\n",
-    "#         print('Opened ' + str(age.days) + ' days ago on ' + dateOpened )\n",
-    "#         print('Module: ' + issue['repo_name']    )\n",
-    "        openIssues = openIssues.replace('AGE' , str(age.days ) )\n",
-    "        openIssues = openIssues.replace('ODATE' , dateOpened )\n",
-    "        openIssues = openIssues.replace('MODULE' , str(issue['repo_name']) )\n",
-    "        \n",
-    "        issueBody = issue['body']\n",
-    "        if issueBody is not None :\n",
-    "            issueCnt = 0\n",
-    "#             issueLineList  = string2List(issueBody)\n",
-    "            issueMatrix = ' \\\\begin{array}{l}  '\n",
-    "            for issueLine in issueBody:\n",
-    "                if len(issueLine) > 1 and ('[ ]' in  issueLine or '[x]' in issueLine) :\n",
-    "                    issueCnt += 1\n",
-    "                    matrixLine = ' \\\\small { \\\\textsf{LINE }} \\\\\\ '\n",
-    "                    issueMatrix = issueMatrix + matrixLine.replace('LINE', issueLine   )\n",
-    "            if issueCnt > 0:\n",
-    "                issueMatrix = issueMatrix + '  \\\\end{array}  '\n",
-    "                tasksComments = TASKS_TEMPLATE\n",
-    "                tasksComments = tasksComments.replace('TASKS' ,issueMatrix)\n",
-    "                openIssues = openIssues.replace('TASKS' , tasksComments )\n",
+    "milestones = ['Speedometer is Multi Tenant Capable'  , 'Tachometer is Functional' , 'CURB is Functional',\n",
+    "              'Standards Compliant', 'Glovebox is Functional', 'Ongoing Support of UAT and Prod']\n",
+    "for milestone in milestones:\n",
+    "    display(Markdown( milestoneTitle.replace('MSTONE', milestone  ) ))\n",
+    "    for issue in issuesList:\n",
+    "        if issue['state'] == 'open' and issue['milestone'] == milestone:\n",
+    "    #         print('\\n' + issue['issue_title'] + ' - #' + str(issue['issue_number'] )   )\n",
+    "            openIssues = OPEN_ISSUES_TEMPLATE\n",
+    "            openIssues = openIssues.replace('TITLE' , issue['issue_title'] )\n",
+    "            openIssues = openIssues.replace('NBR' , str(issue['issue_number']) )\n",
+    "            openedDate = datetime.datetime.strptime(issue['date_opened'],\"%Y-%m-%dT%H:%M:%SZ\")\n",
+    "            age = td - openedDate\n",
+    "            dateOpened =openedDate.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d\")\n",
+    "    #         print('Opened ' + str(age.days) + ' days ago on ' + dateOpened )\n",
+    "    #         print('Module: ' + issue['repo_name']    )\n",
+    "            openIssues = openIssues.replace('AGE' , str(age.days ) )\n",
+    "            openIssues = openIssues.replace('ODATE' , dateOpened )\n",
+    "            openIssues = openIssues.replace('MODULE' , str(issue['repo_name']) )\n",
+    "    #  Display Tasks\n",
+    "            issueBody = issue['body']\n",
+    "            if issueBody is not None :\n",
+    "                issueCnt = 0\n",
+    "    #             issueLineList  = string2List(issueBody)\n",
+    "                issueMatrix = ' \\\\begin{array}{l}  '\n",
+    "                for issueLine in issueBody:\n",
+    "                    if len(issueLine) > 1 and ('[ ]' in  issueLine or '[x]' in issueLine) :\n",
+    "                        issueCnt += 1\n",
+    "                        matrixLine = ' \\\\small {  CHECKBOX \\\\ \\\\textsf{LINE }  } \\\\\\ '\n",
+    "                        checkbox = issueLine[:5]\n",
+    "                        checkbox = checkbox.replace('- [x]'  , ' \\\\color{green}{\\\\boxed{x}} \\\\ '  )\n",
+    "                        checkbox = checkbox.replace('- [ ]'  , ' \\\\color{red}{\\\\boxed{\\\\phantom{x}}} \\\\ '  )\n",
+    "                        matrixLine = matrixLine.replace( 'CHECKBOX'  , checkbox )\n",
+    "                        issueMatrix = issueMatrix + matrixLine.replace('LINE', issueLine[6:]   )\n",
+    "                if issueCnt > 0:\n",
+    "                    issueMatrix = issueMatrix + '  \\\\end{array}  '\n",
+    "                    tasksComments = TASKS_TEMPLATE\n",
+    "                    tasksComments = tasksComments.replace('TASKS' ,issueMatrix)\n",
+    "                    openIssues = openIssues.replace('TASKS' , tasksComments )\n",
+    "                else:\n",
+    "                    openIssues = openIssues.replace('TASKS' , '\\\\textit{No Tasks Entered}' )\n",
     "            else:\n",
-    "                openIssues = openIssues.replace('TASKS' , '\\\\textit{No Tasks Entered}' )\n",
-    "        else:\n",
-    "            openIssues = openIssues.replace('TASKS' , '\\\\textit{No Tasks Entered}' )  \n",
-    "        \n",
-    "        \n",
-    "        if len(issue['labels']) > 0:\n",
-    "            labelsMatrix = ' \\\\begin{array}{l}    '\n",
-    "            for label in issue['labels'] :\n",
-    "                matrixLine = ' \\\\small { \\\\textsf{LABEL }}  \\\\\\  '\n",
-    "                labelsMatrix = labelsMatrix + matrixLine.replace('LABEL', label['description'] )\n",
-    "            labelsMatrix = labelsMatrix + '  \\\\end{array}   '\n",
-    "            issueComments = LABELS_TEMPLATE\n",
-    "            openIssues = openIssues.replace('LABELS' , issueComments.replace('COMM',labelsMatrix ))\n",
-    "        else:\n",
-    "            openIssues = openIssues.replace('LABELS' , ' \\\\textit{No Comments} ' )    \n",
-    "                \n",
-    "        display(Markdown ('$ ' + openIssues   + ' $'    ))\n",
-    "               \n",
+    "                openIssues = openIssues.replace('TASKS' , '\\\\textit{No Tasks Entered}' )  \n",
+    "    # Display Comments\n",
+    "            if len(issue['labels']) > 0:\n",
+    "                labelsMatrix = ' \\\\begin{array}{l}    '\n",
+    "                for label in issue['labels'] :\n",
+    "                    matrixLine = ' \\\\small { \\\\textsf{LABEL }}  \\\\\\  '\n",
+    "                    labelsMatrix = labelsMatrix + matrixLine.replace('LABEL', label['description'] )\n",
+    "                labelsMatrix = labelsMatrix + '  \\\\end{array}   '\n",
+    "                issueComments = LABELS_TEMPLATE\n",
+    "                openIssues = openIssues.replace('LABELS' , issueComments.replace('COMM',labelsMatrix ))\n",
+    "            else:\n",
+    "                openIssues = openIssues.replace('LABELS' , ' \\\\textit{No Comments} ' )    \n",
+    "\n",
+    "            display(Markdown ('$ ' + openIssues   + ' $'    ))\n",
+    "\n",
     "# print('\\nIssues Closed Last Week')\n",
-    "display(Markdown( '$ \\\\normalsize \\\\color{blue} {\\\\textsf{Summary Issues Closed Last 7 Days (Including Merged Branches)}} \\\\\\[1pt]  $ '  ))\n",
+    "closedTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
+    "<hr style=\"height:5px;border-width:0;color:green;background-color:green\">\n",
+    "$ \\hspace {20mm} \\\\normalsize \\\\color{green} \n",
+    "{\\\\textbf{Summary of Issues Closed During Last 7 Days (Including Merged Branches)}} \\\\\\[1pt]  $ \n",
+    "<hr style=\"height:5px;border-width:0;color:green;background-color:green\">\n",
+    "\"\"\"\n",
+    "\n",
+    "display(Markdown( closedTitle  ))\n",
     "for issue in issuesList:\n",
     "    if issue['state'] == 'closed':\n",
     "        openedDate = datetime.datetime.strptime(issue['date_opened'],\"%Y-%m-%dT%H:%M:%SZ\")\n",
@@ -171,7 +203,7 @@
     "        closedDate = datetime.datetime.strptime(issue['date_closed'],\"%Y-%m-%dT%H:%M:%SZ\")\n",
     "        dateClosed =closedDate.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d\")\n",
     "        age = td - closedDate\n",
-    "        if age.days > 6 :\n",
+    "        if age.days > 7 :\n",
     "            continue\n",
     "        closedIssue = CLOSED_ISSUE_TEMPLATE\n",
     "        closedIssue = closedIssue.replace('TITLE' , issue['issue_title'] )\n",
@@ -194,12 +226,18 @@
     "        display(Markdown ('$ ' + closedIssue   + ' $'    ))\n",
     "\n",
     "# print('\\nIssues Opened Last Week')\n",
-    "display(Markdown( '$ \\\\normalsize \\\\color{blue} {\\\\textsf{Summary Issues Opened Last 7 Days }} \\\\\\[1pt]  $ '  ))\n",
+    "openedTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
+    "<hr style=\"height:5px;border-width:0;color:red;background-color:red\">\n",
+    "$ \\hspace {50mm} \\\\normalsize \\\\color{red} \n",
+    "{\\\\textbf{Summary of Issues Opened During Last 7 Days}} \\\\\\[1pt]  $ \n",
+    "<hr style=\"height:5px;border-width:0;color:red;background-color:red\">\n",
+    "\"\"\"\n",
+    "display(Markdown( openedTitle ))\n",
     "for issue in issuesList:\n",
     "    if issue['state'] == 'open':\n",
     "        openedDate = datetime.datetime.strptime(issue['date_opened'],\"%Y-%m-%dT%H:%M:%SZ\")\n",
     "        age = td - openedDate\n",
-    "        if age.days > 6 :\n",
+    "        if age.days > 7 :\n",
     "            continue\n",
     "#         print('\\n' + issue['issue_title'] + ' - #' + str(issue['issue_number'] )   )\n",
     "        dateOpened =openedDate.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d\")\n",
